--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
     
         <div class="intro-logo">
-            <img src="img/LogoMichael_1.webp" alt="Michael's Coffee House" class="logo-intro">
+            <img src="img/atrayana.webp" alt="Michael's Coffee House" class="logo-intro">
         </div>
     
     </section>   
