--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     
         <div class="intro-logo">
-            <img src="img/LogoMichael_1.webp" alt="Michael's Coffee House" class="logo-intro">
+            <img src="img/atrayana.webp" alt="Michael's Coffee House" class="logo-intro">
         </div>
     
     </section>    
@@ -32,7 +32,7 @@
     <main class="carta-contenedor">
 
         <!-- Imágenes de la carta -->
-        <img src="img/M1.jpg" class="carta-imagen" alt="Carta página 1">
+        <img src="img/CartaAtrayana.webp" class="carta-imagen" alt="Carta página 1">
         <!-- Botones de contacto -->
         <div class="contacto-botones">
 
@@ -51,7 +51,7 @@
             </a>
 
             <!-- Botón WhatsApp -->
-            <a href="https://wa.me/+34686688461?text=Hola%20Michael%20" target="_blank"
+            <a href="https://wa.me/+34686688461?text=Hola%2C%20me%20llamo%20" target="_blank"
                class="btn-contacto btn-whatsapp2">
                 <span class="icono-svg">
                     <svg viewBox="0 0 32 32">
