--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     
         <div class="intro-logo">
-            <img src="img/atrayana.webp" alt="Michael's Coffee House" class="logo-intro">
+            <img src="img/atrayana.webp" alt="CartaAtrayana" class="logo-intro">
         </div>
     
     </section>    
